--- a/src/Components/Countries/Countries.css
+++ b/src/Components/Countries/Countries.css
@@ -3,3 +3,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
+.visited-flags-container img {
+  width: 120px;
+  margin-right: 10px;
+}
